// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hooks author 1`] = `
"#### 🐛  Bug Fix

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (:heart: Adam Dierkens/adam@dierkens.com :heart:)"
`;

exports[`Hooks title 1`] = `
":heart: 🐛  Bug Fix :heart:
- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should be able to customize "Push To Master" title 1`] = `
"#### 🚀  Enhancement

- First Feature [#1235](https://github.custom.com/foobar/auto/pull/1235) (adam@dierkens.com)

#### Custom Title

- I was a push to master  (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should be able to customize titles 1`] = `
"#### Woo Woo New Features

- First Feature [#1235](https://github.custom.com/foobar/auto/pull/1235) (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should combine pr w/no label and labelled pr 1`] = `
"#### 🐛  Bug Fix

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (adam@dierkens.com)
- Third  (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for JIRA commits 1`] = `
"#### 💥  Breaking Change

- [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Some Feature [#12345](https://github.custom.com/foobar/auto/pull/12345) (adam@dierkens.com)

#### 🐛  Bug Fix

- Third  (adam@dierkens.com)

#### 🏠  Internal

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for PR commits 1`] = `
"#### 🚀  Enhancement

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for PR commits without labels 1`] = `
"#### 🐛  Bug Fix

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for jira commits without labels 1`] = `
"#### 🐛  Bug Fix

- [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Fix P0  (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should include PR-less commits as patches 1`] = `
"#### 🚀  Enhancement

- First Feature [#1235](https://github.custom.com/foobar/auto/pull/1235) (adam@dierkens.com)

#### ⚠️  Pushed to master

- I was a push to master  (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should omit authors with invalid email addresses 1`] = `
"#### 🚀  Enhancement

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234)"
`;

exports[`generateReleaseNotes should use only email if author name doesn't exist 1`] = `
"#### 🐛  Bug Fix

- Another Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) (adam@dierkens.com)
- One Feature [#1235](https://github.custom.com/foobar/auto/pull/1235)"
`;

exports[`generateReleaseNotes should use username if present 1`] = `
"#### 🚀  Enhancement

- Some Feature [#1234](https://github.custom.com/foobar/auto/pull/1234) ([@adam](https://github.custom.com/adam))"
`;
